Fix mobile project header overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -924,10 +924,8 @@ header {
       height: 70vh;
     }
     .sidebar {
-      .project {
-        .project-name {
-          width: 200px;
-        }
+      .projects-header {
+        overflow-x: hidden;
       }
     }
     .mobile-stretch {
